# jr1

./: .gitignore
jr1_cad/models/: battery.fcstd  battery_chinstrap.fcstd  battery_holder.fcstd  computer_mounting_spacer.fcstd  crossbeam.fcstd  electronics_carrier.fcstd  electronics_cover.fcstd  hub.fcstd  jr1.fcstd  lens_holder.fcstd  mini_motor_mount.fcstd  motor_mount.fcstd  right_motor.fcstd  sensor_head.fcstd
jr1_description/: CMakeLists.txt  package.xml
jr1_description/models/sensor_head/: enclosure.fcstd  lens_mount_holder.fcstd
jr1_drivers/: CMakeLists.txt  notes  package.xml
jr1_drivers/firmware/mainboard/: mainboard.ino
jr1_drivers/nodes/: mainboard  razor9dof  serial_test
jr1_drivers/scripts/: motor  motor_driver  mouse
jr1_drivers/src/jr1_drivers/: razor9dof.py
jr1_drivers/sys_config/: 99-firefly-mv.rules  99-razor.rules  99-roboclaw.rules  99-ublox-gps.rules  install.sh
jr1_launch/: CMakeLists.txt  package.xml
jr1_launch/config/: bryant_course.yaml  razor.yaml  vis.perspective  vis.rviz
jr1_launch/launch/: calibrate_cameras.launch  cameras.launch  gps.launch  motors.launch  razor.launch  robot.launch  sensors.launch  teleop.launch  vis.launch
jr1_launch/scripts/: plot_gps  plot_imu  record
jr1_nav/: CMakeLists.txt  package.xml
jr1_nav/nodes/: executive  nav_filter
