<?xml version="1.0"?>
<package>
  <name>jr1_drivers</name>
  <version>0.0.0</version>
  <description>Driver nodes for the JR1 robot</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>

</package>
