<?xml version="1.0"?>
<package>
  <name>jr1_nav</name>
  <version>0.0.1</version>
  <description>The jr1_nav package</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-pyproj</run_depend>

</package>